welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:3: error: '(' expected but identifier found.
  (for n <- 1 to 5){
       ^Poucet:13: error: illegal start of simple expression
}{
^Poucet:13: error: 'while' expected but '{' found.
}{
 ^Poucet:16: error: '(' expected but ';' found.
    avance(); 
^